force-app/main/default/objects/Opportunity/fields/Account_and_Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_and_Opportunity_Name__c</fullName>
    <formula>HYPERLINK(&quot;https://wlsc.my.salesforce.com/?sort=&quot; &amp;   Account.Name   &amp; &quot; - &quot; &amp;  Name , &quot;&quot;, &quot;_parent&quot;) &amp; 
HYPERLINK(&quot;https://wlsc.my.salesforce.com/&quot; &amp; Id, Account.Name &amp; &quot; - &quot; &amp; Name ,&quot;_parent&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account and Opportunity Name</label>
    <type>Text</type>
</CustomField>