force-app/main/default/objects/Opportunity/fields/Account_and_Opportunity_Name_text__c.field-meta.xml
<CustomField>
    <fullName>Account_and_Opportunity_Name_text__c</fullName>
    <formula>Account.Name &amp; &quot; - &quot; &amp;Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account and Opportunity Name (text)</label>
    <type>Text</type>
</CustomField>