force-app/main/default/objects/Opportunity/fields/Account_Opportunity_and_Projects__c.field-meta.xml
<CustomField>
    <fullName>Account_Opportunity_and_Projects__c</fullName>
    <formula>Account.Name &amp; &quot; - &quot; &amp;Name &amp; &quot; - &quot; &amp;Associated_Projects__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Opportunity and Projects</label>
    <type>Text</type>
</CustomField>