force-app/main/default/objects/Opportunity/fields/Account_Opportunity_Projects_and_Dates__c.field-meta.xml
<CustomField>
    <fullName>Account_Opportunity_Projects_and_Dates__c</fullName>
    <formula>Account.Name &amp; &quot; - &quot; &amp;Name &amp; &quot; - &quot; &amp;Associated_Projects__c &amp; &quot; : &quot; &amp; TEXT( Earliest_Product_Start_Date__c ) &amp; &quot; - &quot; &amp; TEXT(Latest_Product_End_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Opportunity Projects and Dates</label>
    <type>Text</type>
</CustomField>