force-app/main/default/objects/Opportunity/fields/Account_Prefix__c.field-meta.xml
<CustomField>
    <fullName>Account_Prefix__c</fullName>
    <formula>Account.Account_Prefix__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Prefix</label>
    <type>Text</type>
</CustomField>