force-app/main/default/objects/Opportunity/fields/Account_Program__c.field-meta.xml
<CustomField>
    <fullName>Account_Program__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account Program</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <errorMessage>Account Program does not match Opportunity&apos;s Account. Please update the Account field or select a matching Account Program</errorMessage>
        <filterItems>
            <field>Account_Program__c.Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId</valueField>
        </filterItems>
        <filterItems>
            <field>Account_Program__c.Name</field>
            <operation>contains</operation>
            <value>TBD</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account_Program__c</referenceTo>
    <relationshipLabel>Recruiting (Student Opportunities)</relationshipLabel>
    <relationshipName>RecruitingStudentOpportunities</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>