force-app/main/default/objects/Opportunity/fields/Account_Program_Recruiting_Manager__c.field-meta.xml
<CustomField>
    <fullName>Account_Program_Recruiting_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Program Recruiting Manager</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Account Program Recruiting Manager)</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>