force-app/main/default/objects/Opportunity/fields/Active_Scope_Datestamp__c.field-meta.xml
<CustomField>
    <fullName>Active_Scope_Datestamp__c</fullName>
    <description>Date Active Scope Stage is reached</description>
    <label>Active Scope Datestamp</label>
    <type>Date</type>
</CustomField>