force-app/main/default/objects/Opportunity/fields/Agency_Deal__c.field-meta.xml
<CustomField>
    <fullName>Agency_Deal__c</fullName>
    <description>Is the deal brought by an Agency?</description>
    <inlineHelpText>Is the deal brought by an Agency?</inlineHelpText>
    <label>Is a third party agency involved?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>