force-app/main/default/objects/Opportunity/fields/Agent__c.field-meta.xml
<CustomField>
    <fullName>Agent__c</fullName>
    <formula>IF(ISBLANK(Talent__c), Account.Agent__r.FirstName &amp; &quot; &quot; &amp; Account.Agent__r.LastName, Talent__r.Agent__r.FirstName &amp; &quot; &quot; &amp; Talent__r.Agent__r.LastName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agent</label>
    <type>Text</type>
</CustomField>