force-app/main/default/objects/Opportunity/fields/Agent_Cost_Centers__c.field-meta.xml
<CustomField>
    <fullName>Agent_Cost_Centers__c</fullName>
    <label>Agent Cost Centers</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Workday_Cost_Center_Complete</valueSetName>
    </valueSet>
</CustomField>