force-app/main/default/objects/Opportunity/fields/Agent_Email_Field__c.field-meta.xml
<CustomField>
    <fullName>Agent_Email_Field__c</fullName>
    <label>Agent Email Field</label>
    <type>Email</type>
</CustomField>