force-app/main/default/objects/Opportunity/fields/Agent_Id__c.field-meta.xml
<CustomField>
    <fullName>Agent_Id__c</fullName>
    <formula>Talent__r.Agent__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agent Id</label>
    <type>Text</type>
</CustomField>