force-app/main/default/objects/Opportunity/fields/Amount_Alternate__c.field-meta.xml
<CustomField>
    <fullName>Amount_Alternate__c</fullName>
    <label>Amount (Alternate)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>