force-app/main/default/objects/Opportunity/fields/Amount_number__c.field-meta.xml
<CustomField>
    <fullName>Amount_number__c</fullName>
    <formula>Amount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount (number)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>