force-app/main/default/objects/Opportunity/fields/Associated_Products__c.field-meta.xml
<CustomField>
    <fullName>Associated_Products__c</fullName>
    <description>Rollup text field using DLRS tool to pull Product Names</description>
    <label>Associated Products</label>
    <type>TextArea</type>
</CustomField>