force-app/main/default/objects/Opportunity/fields/Associated_Products_and_Cost_Centers__c.field-meta.xml
<CustomField>
    <fullName>Associated_Products_and_Cost_Centers__c</fullName>
    <description>Opportunity Products and Cost Center details are populated automatically using Declarative Lookup Rollup Summaries app after save.</description>
    <label>Associated Products and Cost Centers</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>