force-app/main/default/objects/Opportunity/fields/Associated_Projects__c.field-meta.xml
<CustomField>
    <fullName>Associated_Projects__c</fullName>
    <inlineHelpText>Auto populated once linked to a WD Project</inlineHelpText>
    <label>Associated Projects</label>
    <length>255</length>
    <type>Text</type>
</CustomField>