force-app/main/default/objects/Opportunity/fields/Associated_Regions__c.field-meta.xml
<CustomField>
    <fullName>Associated_Regions__c</fullName>
    <description>Rollup text field using DLRS tool to pull Product Names</description>
    <label>Associated Regions</label>
    <type>TextArea</type>
</CustomField>