force-app/main/default/objects/Opportunity/fields/Auto_Renew__c.field-meta.xml
<CustomField>
    <fullName>Auto_Renew__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to indicate expected auto-renewals, however, no automation exists to auto-generate Renewal Opportunities. Manual data entry must be done by Account Owner.</description>
    <inlineHelpText>Check if Retainer is expected to renew automatically.</inlineHelpText>
    <label>Auto-Renew</label>
    <type>Checkbox</type>
</CustomField>