force-app/main/default/objects/Opportunity/fields/Background_Check_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Background_Check_Completed_Date__c</fullName>
    <label>Background Check Completed Date</label>
    <type>Date</type>
</CustomField>