force-app/main/default/objects/Opportunity/fields/Background_Check_Required__c.field-meta.xml
<CustomField>
    <fullName>Background_Check_Required__c</fullName>
    <formula>TEXT(Account_Program__r.Program__r.Program_Requires_Background_Check__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Background Check Required</label>
    <type>Text</type>
</CustomField>