force-app/main/default/objects/Opportunity/fields/Background_Check_Results__c.field-meta.xml
<CustomField>
    <fullName>Background_Check_Results__c</fullName>
    <label>Background Check Results</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Completed</fullName>
                <default>true</default>
                <label>Not Completed</label>
            </value>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>