force-app/main/default/objects/Opportunity/fields/Base_Scope_or_Project__c.field-meta.xml
<CustomField>
    <fullName>Base_Scope_or_Project__c</fullName>
    <label>Base Scope or Project?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Base Scope</fullName>
            </value>
            <value>
                <fullName>Project</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>