force-app/main/default/objects/Opportunity/fields/BPBR_US_Cost_Centers_Approved__c.field-meta.xml
<CustomField>
    <fullName>BPBR_US_Cost_Centers_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox used for once a BPBR US Product Opportunity is Approved.</description>
    <label>BPBR US Cost Centers Approved</label>
    <type>Checkbox</type>
</CustomField>