force-app/main/default/objects/Opportunity/fields/Bucket_Amount__c.field-meta.xml
<CustomField>
    <fullName>Bucket_Amount__c</fullName>
    <formula>IF(Amount&lt;50000,&quot;Small&quot;,IF(AND(Amount &gt;=50000,Amount&lt;500000),&quot;Medium&quot;,IF(AND(Amount&gt;=500000,Amount&lt;1000000),&quot;Large&quot;,IF(Amount&gt;=1000000,&quot;XL&quot;,&quot;Error&quot;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bucket Amount</label>
    <type>Text</type>
</CustomField>