force-app/main/default/objects/Opportunity/fields/Budget_Tier_del__c.field-meta.xml
<CustomField>
    <fullName>Budget_Tier_del__c</fullName>
    <label>Budget Tier</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>$100K</fullName>
            </value>
            <value>
                <fullName>$150K - $250K</fullName>
            </value>
            <value>
                <fullName>$250K - $500K</fullName>
            </value>
            <value>
                <fullName>$500K - $1MM</fullName>
            </value>
            <value>
                <fullName>$1.5MM+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>