force-app/main/default/objects/Opportunity/fields/Client_Department__c.field-meta.xml
<CustomField>
    <fullName>Client_Department__c</fullName>
    <formula>TEXT(Talent_Client__r.Client_Department__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Department</label>
    <type>Text</type>
</CustomField>