force-app/main/default/objects/Opportunity/fields/Client_Services_Representative__c.field-meta.xml
<CustomField>
    <fullName>Client_Services_Representative__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Services Representative</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>