force-app/main/default/objects/Opportunity/fields/Close_Date_Text__c.field-meta.xml
<CustomField>
    <fullName>Close_Date_Text__c</fullName>
    <formula>LPAD(TEXT(MONTH  (CloseDate)),2,&quot;0&quot;)&amp;&quot;/&quot;&amp;LPAD(TEXT(DAY (CloseDate)),2,&quot;0&quot;)&amp;&quot;/&quot;&amp;TEXT(YEAR(CloseDate))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Close Date (Text)</label>
    <type>Text</type>
</CustomField>