force-app/main/default/objects/Opportunity/fields/Closed_Lost_Reason__c.field-meta.xml
<CustomField>
    <fullName>Closed_Lost_Reason__c</fullName>
    <label>Closed Lost Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Position filled</fullName>
            </value>
            <value>
                <fullName>Auto Closed - Inactivate Opportunity</fullName>
            </value>
            <value>
                <fullName>Student Declined Interview</fullName>
            </value>
            <value>
                <fullName>Candidate No-Show for Scheduled Interview</fullName>
            </value>
            <value>
                <fullName>Recruiter Rejected Candidate</fullName>
            </value>
            <value>
                <fullName>Client Rejected Candidate</fullName>
            </value>
            <value>
                <fullName>Student Declined Offer</fullName>
            </value>
            <value>
                <fullName>Student did not complete Contract</fullName>
            </value>
            <value>
                <fullName>Student does not want to Return to Program</fullName>
            </value>
            <value>
                <fullName>Failed Background Check</fullName>
                <isActive>false</isActive>
                <label>Failed Background Check</label>
            </value>
            <value>
                <fullName>International Student w/out Valid SSN</fullName>
                <isActive>false</isActive>
                <label>International Student w/out Valid SSN</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
            <value>
                <fullName>Student Failed Background Check</fullName>
                <isActive>false</isActive>
                <label>Student Failed Background Check</label>
            </value>
            <value>
                <fullName>Student Non-Responsive</fullName>
                <isActive>false</isActive>
                <label>Student Non-Responsive</label>
            </value>
            <value>
                <fullName>Student did not complete Onboarding</fullName>
                <isActive>false</isActive>
                <label>Student did not complete Onboarding</label>
            </value>
            <value>
                <fullName>Student is not eligible for this opportunity</fullName>
                <isActive>false</isActive>
                <label>Student is not eligible for this opportunity</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>