force-app/main/default/objects/Opportunity/fields/Closed_Won_Reconciled_Amount__c.field-meta.xml
<CustomField>
    <fullName>Closed_Won_Reconciled_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Closed Won Reconciled Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>