force-app/main/default/objects/Opportunity/fields/Commission__c.field-meta.xml
<CustomField>
    <fullName>Commission__c</fullName>
    <formula>IF(ISBLANK( Commission_Override__c) ,CASE( LeadSource ,&quot;ESPN&quot;,0.2,&quot;Undertone&quot;,0.1,&quot;Cycle&quot;,0.05,NULL),Commission_Override__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commission %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>