force-app/main/default/objects/Opportunity/fields/Commission_Override__c.field-meta.xml
<CustomField>
    <fullName>Commission_Override__c</fullName>
    <label>Commission % Override</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>