force-app/main/default/objects/Opportunity/fields/Commission_RW__c.field-meta.xml
<CustomField>
    <fullName>Commission_RW__c</fullName>
    <description>Copy of Talent&apos;s base commission percentage, can be adjusted per deal.</description>
    <inlineHelpText>Copy of Talent&apos;s base commission percentage, can be adjusted per deal.</inlineHelpText>
    <label>Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>