force-app/main/default/objects/Opportunity/fields/Communication__c.field-meta.xml
<CustomField>
    <fullName>Communication__c</fullName>
    <description>i.e., responsiveness to email request, speaks clearly, approachable manner</description>
    <inlineHelpText>i.e., responsiveness to email request, speaks clearly, approachable manner</inlineHelpText>
    <label>Communication</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>