force-app/main/default/objects/Opportunity/fields/CompanyReference__c.field-meta.xml
<CustomField>
    <fullName>CompanyReference__c</fullName>
    <description>Owner Workday Company populated on creation of an Opportunity based on Opportunity owner</description>
    <label>WD Company Reference</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Workday_Company</valueSetName>
    </valueSet>
</CustomField>