force-app/main/default/objects/Opportunity/fields/CompanyReferenceID__c.field-meta.xml
<CustomField>
    <fullName>CompanyReferenceID__c</fullName>
    <label>Company Reference ID</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>LE001</fullName>
            </value>
            <value>
                <fullName>LE002</fullName>
            </value>
            <value>
                <fullName>LE003</fullName>
            </value>
            <value>
                <fullName>LE004</fullName>
            </value>
            <value>
                <fullName>LE005</fullName>
            </value>
            <value>
                <fullName>LE006</fullName>
            </value>
            <value>
                <fullName>LE007</fullName>
            </value>
            <value>
                <fullName>LE008</fullName>
            </value>
            <value>
                <fullName>LE009</fullName>
            </value>
            <value>
                <fullName>LE010</fullName>
            </value>
            <value>
                <fullName>LE011</fullName>
            </value>
            <value>
                <fullName>LE012</fullName>
            </value>
            <value>
                <fullName>LE013</fullName>
            </value>
            <value>
                <fullName>LE014</fullName>
            </value>
            <value>
                <fullName>LE015</fullName>
            </value>
            <value>
                <fullName>LE016</fullName>
            </value>
            <value>
                <fullName>LE017</fullName>
            </value>
            <value>
                <fullName>LE018</fullName>
            </value>
            <value>
                <fullName>LE019</fullName>
            </value>
            <value>
                <fullName>LE020</fullName>
            </value>
            <value>
                <fullName>LE021</fullName>
            </value>
            <value>
                <fullName>LE022</fullName>
            </value>
            <value>
                <fullName>LE023</fullName>
            </value>
            <value>
                <fullName>LE024</fullName>
            </value>
            <value>
                <fullName>LE025</fullName>
            </value>
            <value>
                <fullName>LE026</fullName>
            </value>
            <value>
                <fullName>LE027</fullName>
            </value>
            <value>
                <fullName>LE028</fullName>
            </value>
            <value>
                <fullName>LE029</fullName>
            </value>
            <value>
                <fullName>LE030</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>