force-app/main/default/objects/Opportunity/fields/Comparison_Report__c.field-meta.xml
<CustomField>
    <fullName>Comparison_Report__c</fullName>
    <formula>HYPERLINK(&quot;/one/one.app?source=aloha#/sObject/00O0t000000FElCEAW/view?fv0=&quot;&amp; Bucket_Amount__c ,&quot;Comparison Report&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Comparison Report</label>
    <type>Text</type>
</CustomField>