force-app/main/default/objects/Opportunity/fields/Connections__c.field-meta.xml
<CustomField>
    <fullName>Connections__c</fullName>
    <description>i.e., social following, campus connections, organization involvement
1 Poor, 2 Average, 3 Exceptional</description>
    <inlineHelpText>i.e., social following, campus connections, organization involvement
1 Poor, 2 Average, 3 Exceptional</inlineHelpText>
    <label>Connections</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>