force-app/main/default/objects/Opportunity/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Recruiting (Student Opportunities)</relationshipLabel>
    <relationshipName>RecruitingFunnels</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>