force-app/main/default/objects/Opportunity/fields/Contract_Amount__c.field-meta.xml
<CustomField>
    <fullName>Contract_Amount__c</fullName>
    <inlineHelpText>What is the overall customer investment amount?</inlineHelpText>
    <label>Contract Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>