force-app/main/default/objects/Opportunity/fields/Contract_Attached__c.field-meta.xml
<CustomField>
    <fullName>Contract_Attached__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox for user to check when contract has been attached</description>
    <inlineHelpText>Checkbox for user to check when contract has been attached</inlineHelpText>
    <label>Contract Attached?</label>
    <type>Checkbox</type>
</CustomField>