force-app/main/default/objects/Opportunity/fields/Contract_Attached_Omission_Reason__c.field-meta.xml
<CustomField>
    <fullName>Contract_Attached_Omission_Reason__c</fullName>
    <description>Reason field for explanation on why &quot;Contract Attached&quot; checkbox is not selected</description>
    <inlineHelpText>If the &quot;Contract Attached&quot; checkbox is not checked, a reason is required as to why a contract is not available.</inlineHelpText>
    <label>Contract Attached Omission Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>