force-app/main/default/objects/Opportunity/fields/Contract_Net_Amount__c.field-meta.xml
<CustomField>
    <fullName>Contract_Net_Amount__c</fullName>
    <formula>Contract_Amount__c * Talent_Marketing_Fee_Percentage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Net Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>