force-app/main/default/objects/Opportunity/fields/Contract_Opened_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Opened_Date__c</fullName>
    <label>Contract Opened Date</label>
    <type>Date</type>
</CustomField>