force-app/main/default/objects/Opportunity/fields/Contract_With__c.field-meta.xml
<CustomField>
    <fullName>Contract_With__c</fullName>
    <description>TM - Tracking who has the overall contract agreement for signature. Tracked in Opportunity History.</description>
    <inlineHelpText>Talent Marketing: Who is this contract sitting with?</inlineHelpText>
    <label>Contract With</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agent</fullName>
            </value>
            <value>
                <fullName>Brand</fullName>
            </value>
            <value>
                <fullName>Business Affairs</fullName>
            </value>
            <value>
                <fullName>Client Third Party</fullName>
            </value>
            <value>
                <fullName>Management/RA</fullName>
            </value>
            <value>
                <fullName>Seller</fullName>
            </value>
            <value>
                <fullName>Signed - Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>