force-app/main/default/objects/Opportunity/fields/Contracted_Amount__c.field-meta.xml
<CustomField>
    <fullName>Contracted_Amount__c</fullName>
    <label>Contracted Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>