force-app/main/default/objects/Opportunity/fields/Contracted_Runoff__c.field-meta.xml
<CustomField>
    <fullName>Contracted_Runoff__c</fullName>
    <description>Sum of Schedule Amount where year is greater than the current year.</description>
    <label>Contracted Runoff</label>
    <summarizedField>OpportunityLineItem.Contracted_Runoff__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>