force-app/main/default/objects/Opportunity/fields/Cost_Center__c.field-meta.xml
<CustomField>
    <fullName>Cost_Center__c</fullName>
    <description>Owner Workday Cost Center populated by the Opportunity Process Builder on creation/reassignment of Opportunity owner</description>
    <label>Cost Center</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Workday_Cost_Center_Complete</valueSetName>
    </valueSet>
</CustomField>