force-app/main/default/objects/Opportunity/fields/Count_of_Files__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Files__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Managed via apex trigger</description>
    <label>Count of Files</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>