force-app/main/default/objects/Opportunity/fields/Count_of_Products_EMEA__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Products_EMEA__c</fullName>
    <description>Count of Products from EMEA</description>
    <label>Count of Products - EMEA</label>
    <summaryFilterItems>
        <field>OpportunityLineItem.Department__c</field>
        <operation>equals</operation>
        <value>Experiential Benelux, Experiential UK, Brands Middle East, Brands &amp; Properties UK</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>