force-app/main/default/objects/Opportunity/fields/Count_of_Products_LS_Cycle__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Products_LS_Cycle__c</fullName>
    <description>Count of Products from LS/Cycle</description>
    <label>Count of Products - LS/Cycle</label>
    <summaryFilterItems>
        <field>OpportunityLineItem.Department__c</field>
        <operation>equals</operation>
        <value>LS/Cycle</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>